V1.2: Add test cases and basic codecov (#85)
* Refactored all class name occurences in project

* Refactor file names

* Add toString() for Ingredient

* Further refactor class name addressbook

* Fix name refactoring and URLs in certain docs

* Add JsonAdaptedRecipe

* Storage folder refactoring  (#76)

* Refactored all class name occurences in project

* Refactor file names

* Add toString() for Ingredient

* Further refactor class name addressbook

* Fix name refactoring and URLs in certain docs

* Add JsonAdaptedRecipe

* Refactor `JsonAdaptedRecipe` with minor changes

* Add improvements off PR comments + refactor

* Refactor UI RecipeCard to use new fields

* Add sample data

* Add preliminary fields for JSONSerializableRecipe

- Additional serilaiztion and config needed for nested fields (Portion,
  Duration)
- Additional config needed for other methods (toModelType)
- Similar config needed for all other JsonSerializable* classes

* Add attempt at jsonadapted

* Add testcases for Recipe Class, sample Recipes

* Add extensive tests for Recipe class

* Add full coverage tests for Recipe class

* Add toString and hash for Recipe

* Add Typical Recipes

* Add fix for Ingredient class regex pattern matching

* Add regex pattern validation for tags

* Add regex matching for Name

* Add more comprehensive regex for Ingredient

* Add full coverage test for Ingredient class

* Add full coverage test for Name class

* Add comprehensive regex for Step matching

Previously, the `\\S+` token was too generic and open to abuse.

Now, the new pattern is more resistant to abuse and will require
significantly more strength to crack

* Add fine-tuning for Step regex

* Add full coverage tests for Step model

* Add full coverage tests for RecipeDuration

* Streamline regex

* Add full coverage tests for RecipePortion

* Add full coverage unit tests for `seedu.recipe.model.recipe`

* Add fix for b